--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .development {
   padding: 30px;
   max-width: 1200px;
